dark mode css fixed

--- a/src/cssFile/country.css
+++ b/src/cssFile/country.css
@@ -18,6 +18,8 @@
     gap: 64px;
     margin-top: 64px;
     padding-bottom: 100px;
+    padding-inline: 30px;
+
 }
 
 .country-details img {
@@ -59,7 +61,6 @@
         align-items: flex-start;
         margin-top: 32px;
         gap: 16px;
-        padding-inline: 40px;
     }
 
     .details-text {
